<resources>

    <string name="app_name" translatable="false">Go4Lunch</string>

    <string name="facebook_application_id" translatable="false">720875585239902</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb720875585239902</string>


    <!-- TWITTER PURPOSE -->
    <string name="twitter_consumer_key" translatable="false">9kdRnIH71HKutGOf05rPle6Mh</string>
    <string name="twitter_consumer_secret" translatable="false">fQiWxA8xwFDKW1dhnpvVfI4tLoWgZSTZytlz1MAFf1M4uMsmrX</string>


    <!-- AUTHENTICATION ACTIVITY-->
    <string name="text_logo">Go4Lunch</string>
    <string name="text_logo_subtitle">Find a nice restaurant and invite your co-workers for lunch</string>
    <string name="google_login"> Sign with google </string>
    <string name="facebook_login"> Sign with facebook </string>
    <string name="email_login"> Sign with email </string>
    <string name="twitter_login"> Sign with twitter </string>


    <string name="connection_succeed">Authentication granted !</string>
    <string name="error_authentication_canceled">Authentication canceled</string>
    <string name="no_name_found">No name found</string>
    <string name="no_mail_found">No mail found</string>
    <string name="error_no_internet">No internet connexion!</string>
    <string name="error_unknown_error">An error occurred</string>


    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="your_lunch">YOUR LUNCH </string>
    <string name="settings">SETTINGS</string>
    <string name="logout">LOG OUT</string>
    <string name="favorite_restaurants">FAVORITE RESTAURANTS</string>

    <!-- Toolbar-->
    <string name="text_toolbar">Go4Lunch</string>
    <string name="I_m_hungry">I\'m hungry</string>
    <string name="workers_toolbar">Available workmates</string>


    <!-- MAIN ACTIVITY POP UP MESSAGE-->
    <string name="main_activity_success_log_out">Log out with success</string>
    <string name="main_activity_pop_up_log_out_title">LOG OUT</string>
    <string name="main_activity_pop_up_log_out_message">Are you sure that you want to log out ?</string>
    <string name="main_activity_pop_up_yes">YES</string>
    <string name="main_activity_pop_up_no">NO</string>


    <!-- RESTAURANT DETAILS -->
    <string name="call">CALL</string>
    <string name="like">LIKE</string>
    <string name="web_site">WEB SITE</string>
    <string name="favorite_restaurant_message">Restaurant added to your favorite list</string>
    <string name="favorite_restaurant_exist"> Restaurant already exist </string>
    <string name="No_one_chose_this_restaurant">No one chose this restaurant</string>

    <string name="dislike">Dislike</string>
    <string name="chosen_restaurant">You have chosen this restaurant</string>
    <string name="no_telephone_number_for_this_restaurant">No telephone number for this restaurant</string>
    <string name="no_website_for_restaurant">No website for this restaurant</string>

    <!-- map fragment -->
    <string name="permission_denied">Permission denied</string>
    <string name="my_position">My position</string>
    <string name="title_activity_settings">Settings</string>

    <!-- workers choice -->
    <string name="no_choice_restaurant_workers">You don\'t have chosen a restaurant</string>
    <string name="is_eating_at">" is eating at \n"</string>
    <string name="hasn_t_decided">" hasn\'t decided yet"</string>
    <string name="is_joining">" is joining!"</string>

    <!-- Firebase query -->
    <string name="error_query">Error getting documents : %s</string>

    <!-- restaurant list -->
    <string name="restaurant_image">restaurant Image</string>
    <string name="restaurant_open"> Open</string>
    <string name="not_open_yet">Close now</string>

    <!-- Stream -->
    <string name="error_stream">error : %s</string>
    <string name="on_Complete_message">On complete</string>


    <!-- restaurant favorite activity -->
    <string name="favorites_restaurant">My Favorites Restaurants</string>
    <string name="your_favorite_restaurants">Your favorite restaurants</string>
    <string name="restaurant_delete">Restaurant delete to your favorite list</string>
    <string name="you_haven_t_choice_restaurant">You haven\'t choose restaurant</string>

    <!--Fab labele -->
    <string name="filter_restaurant_by">Filter restaurant by :</string>
    <string name="Distance">Distance</string>
    <string name="Note">Note</string>
    <string name="Name">Name</string>


    <!-- NOTIFICATION SERVICE -->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="notification_title">You have received a message</string>
    <string name="message_from_go4lunch">Message from Go4Lunch</string>
    <string name="app_logo" translatable="false">app logo</string>
    <string name="no_worker_has_chosen_this_restaurant">No Worker has chosen this restaurant</string>
    <string name="enable_notification">Enable notifications</string>
    <string name="notification_message">"You've a lunch scheduled"</string>
    <string name="main_activity_pop_up_notifications_title">NOTIFICATIONS</string>
    <string name="main_activity_pop_up_notifications_message">Do you want to activate notifications ?</string>

    <!-- Preference Titles -->
    <string name="messages_header">Notifications</string>
    <string name="location">Location</string>
    <string name="notification_header">Notification</string>
    <string name="set_notification_rules">Set notifications configuration</string>
    <string name="french"> French </string>
    <string name="english"> English </string>
    <string name="current_language"> English </string>

    <string name="chose_your_language">Chose your language</string>
    <string name="language">Language </string>
    <string name="message_header_language">Language</string>
    <string name="notification_workmates_with"> With </string>
    <string name="notifications_disable">  Disable notifications  </string>
    <string name="notifications_enable"> Enable notifications  </string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>