<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

    <Preference
        android:fragment="com.example.go4lunch.notifications.NotificationsFragment"
        android:title="@string/notification_header"
        android:summary="@string/set_notification_rules"
        android:icon="@drawable/ic_notifications_black"
        />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/message_header_language">
    <Preference
    android:title="@string/message_header_language"
    android:summary="@string/language_preference"
    android:icon="@drawable/ic_language"
/>
    </PreferenceCategory>
</PreferenceScreen>