<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">

        <item android:id="@+id/drawer_yourLunch"
            android:title="@string/your_lunch"
            android:icon="@drawable/ic_restaurant_menu"/>

        <item android:id="@+id/drawer_favorite_restaurant"
            android:title="@string/favorite_restaurants"
            android:icon="@drawable/ic_star_choice"/>

        <item android:id="@+id/drawer_settings"
            android:title="@string/settings"
            android:icon="@drawable/ic_settings"/>

        <item android:id="@+id/drawer_logOut"
            android:title="@string/logout"
            android:icon="@drawable/ic_power_settings_new"/>

    </group>
</menu>